# Wuwe

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: docs.yml  http-backends.yml
cmake/: copy-runtime-dlls.cmake  wuwe-config.cmake.in  wuwe-runtime.cmake
docs/: agent-runtime.md  dependencies.md  execution-platform-stage.md  execution-restricted-backend-plan.md  execution-runtime.md  getting-started.md  http-backends.md  intro.md  knowledge-retrieval.md  llm-providers.md  llm-streaming.md  llm-tools.md  mcp-host-compatibility.md  mcp-release-checklist.md  mcp-v1-release-notes.md  mcp.md  memory-deployment.md  memory-management.md  observability.md  orchestration.md  packaging.md  planning.md  prompt-chaining.md  reark-integration-notes.md  reasoning.md  reflection.md  security-governance.md
docs/assets/: README.md
examples/: CMakeLists.txt
examples/src/: chain_example.cpp  console_utf8.hpp  cordinator_agent.cpp  example.cpp  flow_example.cpp  knowledge_benchmark_example.cpp  knowledge_mcp_example.cpp  knowledge_qdrant_rag_example.cpp  knowledge_retrieval_example.cpp  llm_streaming_example.cpp  long_term_memory_article_example.cpp  mcp_stdio_example.cpp  memory_example.cpp  memory_vector_example.cpp  openai_example.cpp  prompt_chain_example.cpp  reasoning_example.cpp  reflection_example.cpp  routing_example.cpp  sentiment_analysis.cpp  short_term_memory_article_example.cpp  simple_example.cpp  url_rag_example.cpp
include/wuwe/: wuwe.h
include/wuwe/agent/approval/: approval.hpp  approval_module.hpp  approval_service.hpp
include/wuwe/agent/audit/: audit.hpp  audit_module.hpp  audit_sink.hpp
include/wuwe/agent/capability/: capability.hpp  capability_policy.hpp
include/wuwe/agent/core/: conversation.hpp  message.hpp  observability.hpp  text_search.hpp
include/wuwe/agent/execution/: controlled_process_backend.hpp  execution.hpp  execution_backend.hpp  execution_codec.hpp  execution_core.hpp  execution_policy.hpp  execution_registry.hpp  execution_runtime.hpp  execution_tools.hpp  path_policy.hpp  planned_execution_backends.hpp  restricted_process_backend.hpp
include/wuwe/agent/knowledge/: code_knowledge_loader.hpp  directory_knowledge_loader.hpp  file_knowledge_index.hpp  file_knowledge_loader.hpp  file_knowledge_store.hpp  in_memory_knowledge_index.hpp  in_memory_knowledge_store.hpp  knowledge.hpp  knowledge_benchmark.hpp  knowledge_cache.hpp  knowledge_context.hpp  knowledge_document_enricher.hpp  knowledge_document_loader.hpp  knowledge_eval.hpp  knowledge_grounding.hpp  knowledge_hash.hpp  knowledge_html.hpp  knowledge_index.hpp  knowledge_metrics.hpp  knowledge_migration.hpp  knowledge_observability.hpp  knowledge_parser_registry.hpp  knowledge_path.hpp  knowledge_pipeline.hpp  knowledge_pipeline_config.hpp  knowledge_query_rewriter.hpp  knowledge_rag_service.hpp  knowledge_record.hpp  knowledge_reranker.hpp  knowledge_result_processor.hpp  knowledge_retriever.hpp  knowledge_splitter.hpp  knowledge_store.hpp  knowledge_task.hpp  knowledge_text.hpp  knowledge_tools.hpp  qdrant_knowledge_index.hpp  remote_vector_knowledge_index.hpp  sqlite_knowledge_index.hpp  structured_knowledge_loader.hpp  (+3 more)
include/wuwe/agent/llm/: anthropic_llm_client.h  gemini_llm_client.h  llm_agent_runner.h  llm_client.h  llm_config.h  llm_error.h  llm_provider_factory.h  llm_provider_registry.h  llm_tools.h  llm_types.h  ollama_llm_client.h  openai_compatible_llm_client.h  openai_llm_client.h  openai_provider_presets.h  (+3 more)
include/wuwe/common/: print.h  wuwe_fwd.h
include/wuwe/net/: cpr_http_client.h  default_http_client.h  http_client.h  http_status_code.h  httplib_http_client.h  net_errc.h  sse_event_parser.h  transport_error.h
src/: CMakeLists.txt
src/agent/execution/: controlled_process_backend.cpp  execution_codec.cpp  execution_core.cpp  execution_policy.cpp  execution_registry.cpp  execution_runtime.cpp  execution_tools.cpp  path_policy.cpp  planned_execution_backends.cpp  restricted_process_acl_win32.cpp  restricted_process_acl_win32.hpp  restricted_process_appcontainer_launch_win32.cpp  restricted_process_appcontainer_launch_win32.hpp  restricted_process_appcontainer_win32.cpp  restricted_process_appcontainer_win32.hpp  restricted_process_backend.cpp  restricted_process_backend_candidate.cpp  restricted_process_backend_candidate.hpp  restricted_process_execution_plan_win32.cpp  restricted_process_execution_plan_win32.hpp  restricted_process_request_workspace.cpp  restricted_process_request_workspace.hpp  restricted_process_runtime_staging.cpp  restricted_process_runtime_staging.hpp
src/agent/knowledge/: qdrant_knowledge_index.cpp  tika_runtime.cpp
src/agent/llm/: anthropic_llm_client.cpp  gemini_llm_client.cpp  llm_error.cpp  llm_provider_factory.cpp  llm_provider_registry.cpp  llm_retry.hpp  llm_stream_timeouts.hpp  ollama_llm_client.cpp  openai_compatible_llm_client.cpp  openai_llm_client.cpp  openai_provider_presets.cpp  openrouter_llm_client.cpp
src/agent/mcp/: mcp_host_runtime.cpp  mcp_http_listener.cpp  mcp_process_client.cpp
src/agent/memory/: openai_embedding_model.cpp  qdrant_memory_index.cpp
src/agent/net/: default_http_client.cpp
src/net/: cpr_http_client.cpp  default_http_client.cpp  http_status_code.cpp  httplib_http_client.cpp  net_errc.cpp  transport_error.cpp
tests/: CMakeLists.txt  agent_runtime_tests.cpp  execution_tests.cpp  knowledge_tests.cpp  llm_provider_tests.cpp  mcp_tests.cpp  memory_tests.cpp  net_tests.cpp  planning_tests.cpp  reasoning_tests.cpp  reflection_tests.cpp
tests/fixtures/: knowledge_eval_cases.json
tests/fixtures/knowledge_eval_corpus/: agentic-patterns.md  security-policy.md
tests/package_smoke/: CMakeLists.txt  main.cpp
tools/: mcp-host-transcript.mjs  mcp-host-transcript.ps1  mcp-release-check.ps1  package-wuwe.ps1  package-wuwe.sh
tools/runtime/: start-tika.ps1  start-tika.sh
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
(+61 files in other folders)
